# nifi

./: .gitignore  AGENTS.md  GEMINI.md  MIGRATE_COPYLIST.clean.txt  MIGRATE_COPYLIST.txt  README.md  pytest.ini
automation/: README.md  pyproject.toml
automation/config/: flow-defaults.yaml
automation/docs/: TODO.md  api.md  architecture.md  flow-build-pipeline.md
automation/flows/: NiFi_Flow.yaml  NiFi_Flow_groups.yaml  README.md  big.yaml  complex.yaml  content_jolt_route.yaml  http_server.yaml  medium.yaml  nested.yaml  nested_ports.yaml  path_branch.yaml  queue_depths_http.yaml  simple.yaml  split_merge.yaml  test-workflow-suite.md  trivial.yaml  trust_bootstrap.yaml  two_branch.yaml
automation/manifest/: controller-services.json
automation/process-library/: AttributeTagger.yaml  EchoLogger.yaml  README.md
automation/scripts/: build_groups_yaml_from_md.py  check_invalid_components.py  compose_with_library.py  convert_to_groups.py  deploy_flows.py  diagram_web.py  fetch_bulletins.py  fetch_invalid_processors.py  generate_component_lists.py  generate_doc_topics_json.py  generate_processor_icons.py  generate_stubs_from_md.py  nifi_trust_helper.sh  perform_move_single_to_groups.py  plan_move_single_flows_to_groups.py  provision_json_services.py  purge_nifi_root.py  render_flow_diagram.py  run_integration_suite.sh  run_tools_suite.sh  seed_groups_yaml_from_grouped.py  seed_groups_yaml_from_single_flows.py  split_groups_md.py  sync_descriptions.py  validate_topology.py
automation/tests/: test_auth.py  test_cli_dispatch.py  test_cli_targets.py  test_config.py  (+16 more)
(+388 files in other folders)
